--- a/Client/.vscode/settings.json
+++ b/Client/.vscode/settings.json
@@ -2,7 +2,6 @@
     "java.project.sourcePaths": ["src"],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar",
-        "c:\\Users\\pedro\\Documents\\Programar\\Java\\Login-Authentication-Socket-Application\\Server.jar"
+        "lib/Server.jar"
     ]
 }
